--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "discord":"cd discord && npm start --ignore app",
     "dev": "concurrently --kill-others \"npm run app\" \"npm run discord\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install-all": "npm install && (cd frontend && npm install) && (cd discord && npm install)"
+    "install-all": "npm install && (cd frontend && npm install --legacy-peer-deps) && (cd ../discord && npm install)"
   },
   "author": "",
   "license": "ISC",
@@ -15,3 +15,4 @@
     "concurrently": "^7.0.0"
   }
 }
+
